tests/tc/neg/union02.js

/*@ foo1 :: ((int|bool|void)) => (bool|int) */
function foo1(x) {
  return x;
}

